WIP. app. problem G: 'css flex align scroll'. one possible fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.overflow-overlay {
+    overflow: auto;
+    overflow: overlay;
+}
